Trying to fix spacing for mobile

--- a/match.css
+++ b/match.css
@@ -433,7 +433,7 @@ button {
         flex-direction: column;
         justify-content: center;
         margin: 0;
-        padding: 0 2px;
+        padding: 0 5px;
     }
     footer {
         display: none;
